tests/fixtures/errors/move_borrowed_bind.z
# E0200: a borrowed variable cannot be moved into an owned binding.
thing: class { v: String }
f: function {x: thing} is {
    y: x
}
main: function is {
    t: thing v: "z".string
    f x: t
}
